implement delete all parametrization update swagger scheme
